Prevent table cells from wrapping.
This keeps the table an acceptable height because the lead and follow
cells cannot wrap.

--- a/app/assets/stylesheets/rounds.css.scss
+++ b/app/assets/stylesheets/rounds.css.scss
@@ -1,6 +1,12 @@
-table.results_round td.mark_cell {
-  width: 1em;
-  text-align: center;
+table.results_round {
+  td {
+    white-space: nowrap;
+  }
+
+  td.mark_cell, td.result_cell {
+    width: 1em;
+    text-align: center;
+  }
 }
 
 td.result_cell i.fa-heart {
